# agent_orchestrator

./: .env.example  .gitignore  MODEL_PLAN.md  QUICKSTART.md  docker-compose.yml  start.sh  test_providers.py
.github/workflows/: ci.yml
CONFIG/: models.yaml  skills.yaml  system.yaml
CONFIG/agents/: coder.yaml  orchestrator.yaml  researcher.yaml  social.yaml  writer.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/src/agents/: base.py  registry.py
backend/src/agents/specialists/: coder.py  orchestrator.py  researcher.py  social.py  writer.py
backend/src/api/: app.py
backend/src/api/middleware/: errors.py  rate_limit.py
backend/src/api/routes/: __init__.py  agents.py  crews.py  health.py  models.py  sessions.py  settings.py  system.py  tasks.py  tool_management.py  tools.py
backend/src/core/: config.py  exceptions.py  logging.py  utils.py
backend/src/db/: models.py  session.py
backend/src/memory/: base.py  long_term.py  manager.py  short_term.py
backend/src/models/: __init__.py  fallback.py  ollama.py  openrouter.py  provider.py  schemas.py  token_manager.py
backend/src/orchestration/: collator.py  engine.py  router.py  scheduler.py  schemas.py  state_machine.py
backend/src/orchestration/patterns/: concurrent.py  sequential.py
backend/src/skills/: base.py  registry.py
backend/tests/: __init__.py  test_basic.py
backend/tests/integration/: conftest.py  test_integration.py
backend/tests/unit/: test_agent_registry.py  test_api.py  test_base_agent.py  test_memory.py  test_ollama_provider.py  test_specialist_agents.py  test_state_machine.py  test_token_manager.py  test_tools.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AgentManager.tsx  AgentPanel.tsx  ChatInterface.tsx  CrewManager.tsx  ModelManager.tsx  ModelSelector.tsx  SettingsPanel.tsx  Sidebar.tsx  SystemInfo.tsx  ToolManager.tsx  ToolTester.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
